--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,13 @@
+body {
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+}
+
 img {
     width: 500px;
     height: 500px;
-    display: flex;
-    align-items: center;
+    
 }
 
 .background-color {
@@ -13,10 +18,28 @@ img {
     margin: 30px;
     background-color: lightcoral;
     padding: 25px;
+    color: white;
+    font-size: 23px;
+    border: solid 2px purple;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+#header-container {
+    margin: 30px;
+    background-color: grey;
+    padding: 25px;
+    color: white;
+    font-size: 23px;
+    border: solid 5px purple;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 #title-header {
-    text-align: center;
+    color: lightgoldenrodyellow;
 }
 
 #footer {
@@ -24,4 +47,8 @@ img {
     padding-right: 45px;
     padding-top: 15px;
     text-align: center;
+}
+
+article {
+    padding-left: 30px;
 }
